--- a/style.css
+++ b/style.css
@@ -34,11 +34,6 @@ h2 {
   margin: 1rem 0;
 }
 
-.bg-primary {
-  background: var(--primary-color);
-  color: var(--light-color);
-}
-
 .bg-secondary {
   background: var(--secondary-color);
   color: var(--light-color);
@@ -68,11 +63,17 @@ h2 {
   border-radius: 10px;
   width: 100%;
   height: 100%;
-  position: relative;
+  box-shadow: 1px 2px 5px 3px rgba(179, 174, 174, 0.4),
+    -1px -2px 5px 3px rgba(179, 174, 174, 0.4);
 }
 
 .box-1 {
   grid-column: 1 / span 2;
+  background: url("images/bg-pattern-quotation.svg") no-repeat
+    var(--primary-color);
+  background-position: top right;
+  background-position-x: 85%;
+  color: var(--light-color);
 }
 
 .box-4 {
@@ -100,35 +101,12 @@ h2 {
   font-size: 11px;
 }
 
-.box-1 .head {
-  position: absolute;
-  left: 1.5rem;
-  right: 1.5rem;
-  z-index: 2;
-}
-
-.box-1 .content {
-  position: absolute;
-  padding-right: 1.5rem;
-  bottom: 0;
-  padding-bottom: 1.5rem;
-}
-
 .box-3 p,
 .box-5 p {
   color: var(--secondary-color);
   opacity: 0.7;
 }
 
-.quote-mark {
-  width: 120px;
-  position: absolute;
-  top: 0;
-  right: 100px;
-  opacity: 0.9;
-  z-index: 1;
-  overflow: hidden;
-}
 /* Main Container */
 .main-container {
   display: grid;
@@ -144,14 +122,14 @@ h2 {
 }
 
 /* tablet */
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .main-container {
     grid-template-columns: 1fr;
   }
 }
 
 /* Mobile */
-@media (max-width: 600px) {
+@media (max-width: 769px) {
   .main-container {
     grid-template-columns: 1fr;
   }
@@ -166,14 +144,6 @@ h2 {
 
   .box-4 {
     grid-column: 1;
-  }
-
-  .box-1 .head {
-    position: static;
-  }
-
-  .box-1 .content {
-    position: static;
   }
 
   .quote-mark {
